Updating display to contain input text within the 'display' screen of the calculator. Need to automate font size adjustment to prevent overflow.

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,8 @@ html {
 }
 
 .calculator {
+    display: flex;
+    flex-direction: column;
     border: 4px solid grey;
     border-radius: 5px;
     position: absolute;
@@ -35,6 +37,7 @@ html {
 }
 
 .calculator-previous {
+    display: flex;
     width: 100%;
     font-size: 5rem;
     height: 60px;
